# Piecewise-Differential-Zstd-Coder-POD5-Demo

./: .Dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README_2.md  VbzMemUsage  analysis.py  benchmark_memory.sh  build.sh  debug.py  env-docker.yaml  env.yaml  launcher.py  parallel_run.py  pod5-License.md  run.backup.py  run.py  run_whole.py  sanity_check_datasets.py  used_conda_env.yaml
full_run_csvs/: 0.csv  1.csv  10.csv  4.csv  5.csv  7.csv  8.csv  9.csv
pod5/c++/: CMakeLists.txt
pod5/c++/pod5_format/: c_api.cpp  c_api.h  file_writer.cpp  file_writer.h  signal_table_reader.cpp  signal_table_reader.h  signal_table_schema.cpp  signal_table_utils.h  signal_table_writer.cpp  signal_table_writer.h  types.cpp  types.h
pod5/c++/pod5_format/PDZ/: compressor.cpp  compressor.h  decompressor.cpp  decompressor.h  header.h  metadata.h  pdz.cpp  pdz.h  pdz_reader_state.cpp  pdz_reader_state.h  pdz_writer_state.cpp  pdz_writer_state.h  pore_type_server.cpp  pore_type_server.h
pod5/c++/pod5_format/pgnano/: compressor.h  pgnano.cpp  pgnano.h  pgnano_reader_state.cpp  pgnano_reader_state.h  pgnano_writer_state.cpp  pgnano_writer_state.h
src/c++/: CMakeLists.txt  copy.cpp
src/c++/commonLib/: CMakeLists.txt  codecs.cpp  codecs.h  concepts.h  default_histogram.h  known_pore_types.h  model.cpp  model.h  pore_type_parser.cpp  pore_type_parser.h
src/c++/prototypes/: BAMHandler.cpp
src/c++/tests/: CMakeLists.txt  compression_decompression.cpp
src/python/pgnano.egg-info/: SOURCES.txt
src/python/pgnano/constants/: constants.py
src/python/pgnano/data_obtention/: build_benchmark_dataset.py  dataset_retrieval.py
